--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,26 @@ authors = [
     {name = "Vamsi Sai Garapati",email = "35292779+vamsisaigarapati@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "3.11.11"
 dependencies = [
-    "pandas (>=2.2.3,<3.0.0)"
+    "confluent-kafka (>=2.8.0,<3.0.0)",
+    "folium (>=0.19.4,<0.20.0)",
+    "geopandas (>=1.0.1,<2.0.0)",
+    "hopsworks (>=4.1.8,<5.0.0)",
+    "ipywidgets (>=8.1.5,<9.0.0)",
+    "lightgbm (>=4.5.0,<5.0.0)",
+    "matplotlib (>=3.10.0,<4.0.0)",
+    "mlflow (>=2.20.2,<3.0.0)",
+    "notebook (>=7.3.2,<8.0.0)",
+    "numpy (<1.24)",
+    "pandas (<2.2.0)",
+    "plotly (>=6.0.0,<7.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "scikit-learn (==1.5.2)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "streamlit (>=1.42.0,<2.0.0)",
+    "streamlit-folium (>=0.24.0,<0.25.0)"
 ]
 
 
