--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ matplotlib
 mlflow
 notebook
 numpy<1.24
-pandas
+pandas<2.2.0
 plotly
-pyarrow
+pyarrow==7.0.0
 python-dotenv
 requests
 scikit-learn==1.5.2
