--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-data/*
+data/
+.github/workflows/inference_pipeline.yaml
+.github/workflows/model_training_pipeline.yaml
 # Created by https://www.toptal.com/developers/gitignore/api/python,vs
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vs
 ### Python ###
@@ -6,8 +8,6 @@ data/*
 __pycache__/
 *.py[cod]
 *$py.class
-.github/workflows/inference_pipeline.yaml
-.github/workflows/model_training_pipeline.yaml
 
 # C extensions
 *.so
