--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_feature_pipeline.txt  # Install dependencies if a requirements file exists
+          pip install -r requirements_feature_pipeline.txt
 
       - name: Run new data fetch pipeline and load to hopsworks
         env:
