--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -21,7 +21,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_feature_pipeline.txt
-
+      - name: Debug Secrets
+        run: echo "HOPSWORKS_API_KEY=${{ secrets.HOPSWORKS_API_KEY }}"
       - name: Run new data fetch pipeline and load to hopsworks
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
