--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -1,8 +1,9 @@
 name: taxi_rides_hourly_features_pipeline
+
 on:
   schedule:
-    - cron: '1 * * * *'  # Runs every hour
-  workflow_dispatch:  # Allows manual triggering of the workflow
+    - cron: "1 * * * *"  # Runs every hour
+  workflow_dispatch: {}  # Allows manual triggering of the workflow
 
 jobs:
   run-python-script:
@@ -15,14 +16,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Specify the Python version
+          python-version: "3.11"  # Specify the Python version
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_feature_pipeline.txt
+
       - name: Debug Secrets
         run: echo "HOPSWORKS_API_KEY=${{ secrets.HOPSWORKS_API_KEY }}"
+
       - name: Run new data fetch pipeline and load to hopsworks
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
