--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Run new data fetch pipeline and load to hopsworks
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: python src/feature_pipeline.py
+        run: python pipelines/feature_pipeline.py
