--- a/.github/workflows/model_training_pipeline.yaml
+++ b/.github/workflows/model_training_pipeline.yaml
@@ -1,4 +1,4 @@
-name: taxi_rides_hourly_inference_pipeline
+name: taxi_rides_model_training_pipeline
 on:
   schedule:
     - cron: '0 0 * * 1'  # Runs every Monday at midnight
@@ -20,8 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install dependencies if a requirements file exists
-
+          pip install -r requirements.txt 
+  
       - name: Train model on new data
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
